--- a/buildbot/config.jinja
+++ b/buildbot/config.jinja
@@ -7,7 +7,30 @@
   }
 %}
 
+{% set master = {
+    'conf_path': 'salt://buildbot/files/master.cfg'
+  }
+%}
+
+{% set slave = {
+  'master_name': salt['grains.get']('fqdn'),
+  'master_port': 9989,
+  'slave_name': salt['grains.get']('fqdn'),
+  'slave_password': 'buildbot'
+  }
+%}
+
 {%- macro base_config(key) -%}
   {%- set pillar_key = 'buildbot:base:' ~ key -%}
   {{ salt['pillar.get'](pillar_key, base.get(key)) }}
+{%- endmacro -%}
+
+{%- macro slave_config(key) -%}
+  {%- set pillar_key = 'buildbot:slave:' ~ key -%}
+  {{ salt['pillar.get'](pillar_key, slave.get(key)) }}
+{%- endmacro -%}
+
+{%- macro master_config(key) -%}
+  {%- set pillar_key = 'buildbot:master:' ~ key -%}
+  {{ salt['pillar.get'](pillar_key, master.get(key)) }}
 {%- endmacro -%}
