--- a/buildbot/config.jinja
+++ b/buildbot/config.jinja
@@ -1,6 +1,6 @@
 {% set base = {
     'user': 'buildbot',
-    'home': '/opt/buildbot',
+    'home': '/home/buildbot',
     'install_type': 'pip',
     'install_master': 'true',
     'install_slave': 'true',
