Removed slave and master basedir management

--- a/buildbot/config.jinja
+++ b/buildbot/config.jinja
@@ -5,15 +5,15 @@
     'MASTER_ENABLED': 1,
     'MASTER_NAME': 'buildmaster',
     'MASTER_USER': 'buildbot',
-    'MASTER_BASEDIR': '/opt/buildbot/master',
     'MASTER_OPTIONS': '',
     'MASTER_PREFIXCMD': '',
+    'MASTER_BASEDIR': '/opt/buildbot/master',
     'SLAVE_ENABLED': 1,
     'SLAVE_NAME': 'buildslave #1',
     'SLAVE_USER': 'buildbot',
-    'SLAVE_BASEDIR': '/opt/buildbot/slave',
     'SLAVE_OPTIONS': '',
-    'SLAVE_PREFIXCMD': ''
+    'SLAVE_PREFIXCMD': '',
+    'SLAVE_BASEDIR': '/opt/buildbot/slave'
   }
 %}
 
